Fix headers on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -32,16 +32,16 @@ h2.is-size-4.has-text-weight-semibold{
   color: #1B4083;
 }
 
-h1.has-text-centered.is-size-2.dark {
+div.has-text-centered.is-size-2.dark {
   color: #F0ECEC;
   font-family: 'Julius Sans One', sans-serif;
 }
 
-h1.has-text-centered.is-size-2 {
+div.has-text-centered.is-size-2 {
   color: #118C79;
   margin-bottom: 3rem;
-  border-bottom: 1px solid;
-  width: 30%;
+  /* border-bottom: 1px solid; */
+  /* width: 30%; */
   margin-left: auto;
   margin-right: auto;
   font-family: 'Julius Sans One', sans-serif;
@@ -76,6 +76,10 @@ h3 {
   border-radius: 0.5rem;
   background-color: #F0ECEC;
   color: #118C79;
+}
+
+div.tile.is-ancestor {
+  margin-bottom: 0.75rem;
 }
 
 /* .columns{
